--- a/PredLiga/PredLiga.Presentation/Views/_Layout.cshtml
+++ b/PredLiga/PredLiga.Presentation/Views/_Layout.cshtml
@@ -25,12 +25,14 @@
                 <a href="./" class="navbar-brand">PredLiga Allan Mejia</a>
             </div>
             <nav class="collapse navbar-collapse spa-navbar-collapse" role="navigation">
-                <ul class="nav navbar-nav navbar-right ">
-                    <li>
-                        <a href="./about">About</a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li style="margin-right: 350px">
+                        <h2 style="color: white">
+                            <span>Bienvenido a <strong>PredLiga</strong></span>
+                        </h2>
                     </li>
                     <li>
-                        <a href="./contacts">Contacts</a>
+                        <a href="./about">About</a>
                     </li>
                 </ul>
             </nav>
