--- a/PredLiga/PredLiga.Presentation/Views/profile.cshtml
+++ b/PredLiga/PredLiga.Presentation/Views/profile.cshtml
@@ -74,29 +74,29 @@
     </div>
     <div class="row" ng-hide="isEditingLeague">
         <form class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" ng-submit="addNewLeague()">
-            <h2 class="text-center">Nueva Liga</h2>
-            <div class="form-box">
+            <h2 class="text-center" style="color: darkgoldenrod">Nueva Liga</h2>
+            <div class="form-box" style="background-color: transparent">
                 <div class="form-group">
                     <input ng-model="NombreLiga" type="text" class="form-control" placeholder="Nombre de Liga" required />
                     <input ng-model="NombrePais" type="text" class="form-control" style="margin-top: 5px"placeholder="Nombre de Pais" required />
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block" type="submit" ng-disabled="!(NombreEquipo|| NombrePais)" disabled>Agregar</button>
+                    <button class="btn btn-primary btn-block"style="background-color: darkgoldenrod" type="submit" ng-disabled="!(NombreEquipo|| NombrePais)" disabled>Agregar</button>
                 </div>
             </div>
         </form>
     </div>
     <div class="row" ng-show="isEditingLeague">
         <form class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" ng-submit="FinishEditingLeague()">
-            <h2 class="text-center">Editar Liga</h2>
-            <div class="form-box">
+            <h2 class="text-center" style="color: darkgoldenrod">Editar Liga</h2>
+            <div class="form-box" style="background-color: transparent">
                 <div class="form-group">
                     <input ng-model="NuevoNombreLiga" type="text" class="form-control" placeholder="Nombre de Liga" required />
                     <input ng-model="NuevoNombrePaisLiga" type="text" class="form-control" style="margin-top: 5px" placeholder=" Nombre de Pais" required />
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block" type="submit">Guardar</button>
-                    <button class="btn btn-primary btn-block" type="button" ng-click="cancelEditLeague()">Cancelar</button>
+                    <button class="btn btn-primary btn-block" style="background-color: darkgoldenrod" type="submit" ng-disabled="!(NuevoNombreLiga || NuevoNombrePaisLiga)" disabled>Guardar</button>
+                    <button class="btn btn-primary btn-block" style="background-color: darkgoldenrod" type="button" ng-click="cancelEditLeague()">Cancelar</button>
                 </div>
             </div>
         </form>
