--- a/PredLiga/PredLiga.Presentation/Views/profile.cshtml
+++ b/PredLiga/PredLiga.Presentation/Views/profile.cshtml
@@ -1,6 +1,6 @@
 ﻿<link href="~/Views/profile.css" rel="stylesheet" type="text/css" />    
             
-                 
+                 <!--COMMENT-->
 <div class="container">
     <div class="row clearfix">
         <div class="col-md-12 column">
@@ -33,13 +33,15 @@
     <div class="row clearfix">
         <div class="col-md-12 column">
             <div>
-                <div class="panel-heading">
-                    <div class="input-group">
-                        <input type="search" class="form-control" placeholder="Buscar liga" ng-model="buscar.nombre">
-                    </div>
-                </div>
-
                 <div class="panel-body">
+                    <h2>
+                        <strong>Tabla de Ligas</strong>
+                    </h2>
+                    <div class="panel-heading">
+                        <div class="input-group">
+                            <input type="search" class="form-control" placeholder="Buscar liga" ng-model="buscar.nombre">
+                        </div>
+                    </div>
                     <table class="table">
                         <thead>
                             <tr>
@@ -65,6 +67,38 @@
                                     <a href="" ng-click="editLeague(liga.nombre,ligas.pais)"><i class="glyphicon glyphicon-pencil"></i></a>
                                     <a href="" ng-click="deleteLeague(liga.nombre)"><i class="glyphicon glyphicon-remove"></i></a>
                                 </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h2>
+                        <strong>Tabla de Ligas N/A</strong>
+                    </h2>
+                    <div class="panel-heading">
+                        <div class="input-group">
+                            <input type="search" class="form-control" placeholder="Buscar liga" ng-model="buscar1.nombre">
+                        </div>
+                    </div>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>
+                                    <a href="" ng-click="ordenarPorNA('nombre')">
+                                        Nombre/s
+                                    </a>
+                                    <span class="caret" style="cursor: pointer" ng-click="ordenarPorNA('-nombre')"></span>
+                                </th>
+                                <th>País</th>
+                                <th>Fecha inicio</th>
+                                <th>Fecha finalizacion</th>
+                                <th style="width: 50px;"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="liga in DeletedLeagues | orderBy:OrdenSeleccionadoNA | filter:buscar1">
+                                <td>{{liga.nombre}}</td>
+                                <td>{{liga.pais | uppercase}}</td>
+                                <td>{{liga.inicio | date:'fullDate'}}</td>
+                                <td>{{liga.fin | date:'fullDate'}} </td>
                             </tr>
                         </tbody>
                     </table>
