--- a/PredLiga/PredLiga.Presentation/Views/juegosuser.cshtml
+++ b/PredLiga/PredLiga.Presentation/Views/juegosuser.cshtml
@@ -34,8 +34,7 @@
                 </tbody>
             </table>
         </div>
-    
-        <div class="row">
+        <div class="row" ng-show="isEditingScore">
             <form class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" ng-submit="FinishEditingScore()">
                 <h2 class="text-center">Predecir Marcador</h2>
                 <div class="form-box">
